--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "Highlight That",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Highlight That",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -32,7 +31,9 @@
       "matches": [
         "<all_urls>"
       ],
+      "run_at": "document_start",
       "js": [
+        
         "src/inject/inject.js"
       ]
     }
